# imwheel

./: .gitignore  AUTHORS  BUGS  ChangeLog  EMACS  FREEBSD  M-BA47  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  cfg.c  cfg.h  config.h.in  configure  configure.in  getmdt.c  imwheel.1  imwheel.1.html  imwheel.c  imwheel.h  imwheel.spec  imwheelrc  lefty.sh  mdump.c  mkinstalldirs  see  setimps2.c  setmmplus.c  setps2.c  setps2rate.c  slack.sh  util.c  util.h
getopt/: Makefile.am  Makefile.in  getopt.c  getopt1.c
jax/: Makefile.am  Makefile.in  jax.c  jax.h
mdetect/: Makefile.am  Makefile.in  mdetect.c
mdetect/mice/: a4tech  default  intellimouse  mouseman+  netmouse
